[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Graphics/Minigame/Enemies/enemy_1.png" type="Texture" id=1]
[ext_resource path="res://VPSScripts/Minigame/Enemy.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.00406, 2.00542 )

[node name="Enemy" type="Area2D" groups=[
"minigame_objects",
]]
collision_layer = 2
collision_mask = 21
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
